# python-find-project-root-cookbook

./: .gitignore  LICENSE  README.md  justfile  pyproject.toml  render_readme.py
.github/workflows/: tests.yml
examples/: find_git.py  find_pyproject_toml.py  find_pyproject_toml_project_name.py
src/: _README.md.template  render_readme.py
src/examples/: find_git.py  find_here_file.py  find_marker_file.py  find_pyproject_toml.py  find_pyproject_toml_project_name.py  read_from_env_var.py
src/tests/: test_find_git.py  test_find_here_file.py  test_find_marker_file.py  test_find_pyproject_toml.py  test_find_pyproject_toml_project_name.py  test_read_from_env_var.py
src/tests/assets/: pyproject.toml
