[project]
name = "examples"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jay Qi", email = "jayqi@users.noreply.github.com" }
]
requires-python = "~=3.13"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest",
    "ruff",
]

[tool.ruff]
line-length = 88
src = ["examples", "main.py", "tests.py"]

[tool.ruff.lint]
select = [
  "E", # Pyflakes
  "F", # Pycodestyle
  "I", # isort
]
unfixable = ["F"]

[tool.ruff.lint.isort]
known-first-party = ["examples"]
force-sort-within-sections = true
